--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/nicolepingar/e-commerce_back_end/issues"
   },
-  "homepage": "https://github.com/nicolepingar/e-commerce_back_end#readme"
+  "homepage": "https://github.com/nicolepingar/e-commerce_back_end#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "mysql2": "^2.3.0",
+    "sequelize": "^6.7.0"
+  }
 }
